wip/redesign: responsive - fix game detail block spacing

--- a/public/static/scss/pages/game-detail.scss
+++ b/public/static/scss/pages/game-detail.scss
@@ -93,11 +93,6 @@
       .col-right {
         margin: 0;
       }
-      .col-left, .col-right {
-        .block {
-          margin-top: 0;
-        }
-      }
     }
   }
 
